Fixed index.html Updated to display: grid No horizontal scroll bars!

--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,15 @@ body {
   grid-auto-columns: auto;
   grid-row-gap: 50px;
 }
+.main .subtitle {
+  font-size: 2.4rem;
+  font-weight: 1000;
+}
+@media (max-width: 800px) {
+  .main {
+    padding: 50px 0;
+  }
+}
 /* ___ ___  _  _ _____ _   ___ _____ 
   / __/ _ \| \| |_   _/_\ / __|_   _|
  | (_| (_) | .` | | |/ _ \ (__  | |  
@@ -602,51 +611,138 @@ footer .copyright {
 */
 article {
   display: grid;
-  grid-template-columns: max-content auto;
   grid-column-gap: 50px;
-  color: #222222;
 }
-article .title {
-  border-top: 1px solid black;
-  width: 200px;
+article img {
+  width: 100%;
 }
-article .title h2 {
+article .text {
+  display: grid;
+  grid-row-gap: 20px;
+}
+article h2 {
   font-size: 2.4rem;
-  line-height: 3.6rem;
+  font-weight: 1000;
 }
-article .text h3 {
+article h3 {
   font-size: 3.6rem;
   line-height: 4.2rem;
   word-spacing: 0.33px;
   margin-bottom: 25px;
 }
-article .text p {
+article p {
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  text-align: justify;
+}
+article.small {
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+}
+article.small:nth-of-type(odd) .text {
+  grid-row-start: 1;
+}
+article.small .text a {
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  text-align: justify;
+  color: #222222;
+  text-decoration: none;
+  padding: 10px;
+  text-align: center;
+  border: 1px solid black;
+  width: 150px;
+}
+article.small .text a:hover {
+  color: #ffffff;
+  background-color: #222222;
+}
+@media (max-width: 800px) {
+  article.small {
+    grid-template-columns: 1fr;
+    grid-row-gap: 20px;
+    padding: 0 15px;
+  }
+  article.small .text {
+    grid-template-columns: 1fr;
+  }
+  article.small .text a {
+    width: 100%;
+  }
+  article.small:nth-of-type(odd) .text {
+    grid-row-start: auto;
+  }
+}
+article.medium {
+  grid-template-columns: max-content auto;
+  color: #222222;
+}
+article.medium .title {
+  border-top: 1px solid black;
+  width: 200px;
+}
+article.medium .title h2 {
+  font-size: 2.4rem;
+  line-height: 6.8rem;
+  font-weight: 1000;
+}
+article.medium .text p {
   font-size: 1.6rem;
   line-height: 2.2rem;
   text-indent: 25px;
   text-align: justify;
 }
-article .text p::first-letter {
+article.medium .text p::first-letter {
   font-size: 2.2rem;
   font-weight: 1000;
 }
 @media (max-width: 800px) {
-  article {
+  article.medium {
     grid-template-columns: auto;
     grid-row-gap: 50px;
   }
-  article .title {
+  article.medium .title {
     margin: 0 auto;
     width: 250px;
   }
-  article .title h2 {
+  article.medium .title h2 {
     text-align: center;
     font-size: 3.6rem;
     line-break: 4.2rem;
   }
-  article .text h3 {
+  article.medium .text h3 {
     font-size: 2.4rem;
     line-height: 3.6rem;
+  }
+}
+article.large:nth-of-type(even) .text h2 {
+  justify-self: left;
+  transform: translate(-50px, -50px);
+}
+article.large:nth-of-type(odd) .text h2 {
+  justify-self: right;
+  transform: translate(50px, -50px);
+}
+article.large .text {
+  padding: 0 50px;
+}
+article.large .text h2 {
+  background-color: #d7d7d7;
+  letter-spacing: 5px;
+  word-spacing: 1px;
+  text-transform: uppercase;
+  width: 300px;
+  padding: 35px 0;
+  text-align: center;
+  border: 1px solid white;
+}
+@media (max-width: 800px) {
+  article.large img {
+    height: 200px;
+  }
+  article.large .text h2:nth-of-type(n) {
+    justify-self: center;
+    transform: translate(0, -20px);
   }
 }
 /* ___   _   ___  ___  _   _ ___ ___ _    
