--- a/less/main.less
+++ b/less/main.less
@@ -8,4 +8,11 @@
     display: grid;
     grid-auto-columns: auto;
     grid-row-gap: 50px;
+    .subtitle {
+        font-size: 2.4rem;
+        font-weight: 1000;
+    }
+    @media (max-width: @SM) {
+        padding: 50px 0;
+    }
 }
